apps/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
